_logs/polly/default/log-1.txt
Execute command: [
  `which`
  `cmake`
]
[/home/ubuntu/KhotAbuch/workspace/projects/lab07]> "which" "cmake"
/usr/bin/cmake
Execute command: [
  `cmake`
  `--version`
]
[/home/ubuntu/KhotAbuch/workspace/projects/lab07]> "cmake" "--version"
cmake version 3.28.3

CMake suite maintained and supported by Kitware (kitware.com/cmake).
Execute command: [
  `cmake`
  `-H.`
  `-B/home/ubuntu/KhotAbuch/workspace/projects/lab07/_builds/default`
  `-DCMAKE_TOOLCHAIN_FILE=/home/ubuntu/KhotAbuch/workspace/projects/lab07/tools/polly/default.cmake`
]
[/home/ubuntu/KhotAbuch/workspace/projects/lab07]> "cmake" "-H." "-B/home/ubuntu/KhotAbuch/workspace/projects/lab07/_builds/default" "-DCMAKE_TOOLCHAIN_FILE=/home/ubuntu/KhotAbuch/workspace/projects/lab07/tools/polly/default.cmake"
-- [polly] Used toolchain: Default
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- The C compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Found Python: /usr/bin/python3 (found version "3.12.3") found components: Interpreter
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE
-- Configuring done (2.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ubuntu/KhotAbuch/workspace/projects/lab07/_builds/default
Execute command: [
  `cmake`
  `--build`
  `/home/ubuntu/KhotAbuch/workspace/projects/lab07/_builds/default`
  `--`
]
[/home/ubuntu/KhotAbuch/workspace/projects/lab07]> "cmake" "--build" "/home/ubuntu/KhotAbuch/workspace/projects/lab07/_builds/default" "--"
[  7%] Building CXX object CMakeFiles/print.dir/print.cpp.o
[ 14%] Linking CXX static library libprint.a
[ 14%] Built target print
[ 21%] Building CXX object _deps/googletest-build/googletest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 28%] Linking CXX static library ../../../lib/libgtest.a
[ 28%] Built target gtest
[ 35%] Building CXX object _deps/googletest-build/googletest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 42%] Linking CXX static library ../../../lib/libgtest_main.a
[ 42%] Built target gtest_main
[ 50%] Building CXX object CMakeFiles/check.dir/tests/test1.cpp.o
[ 57%] Linking CXX executable check
[ 57%] Built target check
[ 64%] Building CXX object CMakeFiles/demo.dir/demo/main.cpp.o
/home/ubuntu/KhotAbuch/workspace/projects/lab07/demo/main.cpp: In function ‘int main(int, char**)’:
/home/ubuntu/KhotAbuch/workspace/projects/lab07/demo/main.cpp:16:19: error: variable ‘std::ofstream out’ has initializer but incomplete type
   16 |     std::ofstream out{log_path, std::ios_base::app};
      |                   ^~~
gmake[2]: *** [CMakeFiles/demo.dir/build.make:76: CMakeFiles/demo.dir/demo/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:194: CMakeFiles/demo.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
